# relicon

./: .env.example  .gitignore  .replit  ARCHITECTURE_SUMMARY.md  AUTONOMOUS_LEARNING_SYSTEM.md  COMPLETE_TRUTH_REPORT.md  Dockerfile  README.md  ai_planner.py  analyze_cost_issue.py  debug_ffmpeg.py  debug_generation.py  debug_real_scenario.py  demo_feedback_loop.py  demo_test.py  detailed_cost_report.py  direct_video_maker.py  docker-compose.yml  enhanced_video_generator.py  final_system_test.py  final_test.json  final_working_test.py  fix_and_test.py  generate_video_direct.py  luma_service.py  main.py  package-lock.json  package.json  pyproject.toml  quick_cost_analysis.py  quick_test.py  replit.md  run_backend_persistent.py  run_full_system_test.py  run_server.py  simple_server.py  simple_video_test.py  start-client.js  start-nextjs.js  start-with-nextjs.js  (+28 more)
agent/: core.py  planning.py
ai/: __init__.py
api/: deps.py  main.py  schemas.py
assets/: .gitkeep
attached_assets/: Pasted--Go-with-Soundstripe-s-Enterprise-API-All-in-one-license-that-s-safe-for-ads-every-trac-1751450719319_1751450719321.txt  Pasted--It-s-90-complete-Below-are-the-small-edits-that-will-push-it-to-a-true-first-cut-100-sp-1751185541411_1751185541412.txt  Pasted-Below-is-a-lean-but-complete-build-recipe-I-d-hand-to-a-junior-engineer-on-Replit-to-stand-up-th-1751185020742_1751185020745.txt
backup/: agent_old.py  ai_planner_old.py  database_old.py  dynamic_tree_planner_old.py  energetic_script_generator_old.py  main_old.py
client/: index.html
config/: __init__.py  settings.py
(+97 files in other folders)
