[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "celery>=5.5.3",
    "fastapi>=0.115.14",
    "ffmpeg-python>=0.2.0",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.27",
    "openai>=1.93.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "structlog>=25.4.0",
    "uvicorn>=0.35.0",
]
