[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.4",
    "celery>=5.5.3",
    "cryptography>=45.0.5",
    "decouple>=0.0.7",
    "fastapi>=0.115.14",
    "ffmpeg-python>=0.2.0",
    "httpx>=0.28.1",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.27",
    "openai>=1.93.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "python-decouple>=3.8",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "structlog>=25.4.0",
    "uvicorn>=0.35.0",
]
